Add angular client by ngswag

--- a/LaundryManager.Client/src/app/pages/login-page/login-page.html
+++ b/LaundryManager.Client/src/app/pages/login-page/login-page.html
@@ -32,6 +32,8 @@
           label="Se connecter"
           class="p-button-success w-full mt-3"
         ></button>
+
+        <p *ngIf="error" style="color: red;">{{ error }}</p>
       </div>
     </form>
   </p-card>
