--- a/LaundryManager.Client/src/app/app.html
+++ b/LaundryManager.Client/src/app/app.html
@@ -6,5 +6,5 @@
  <router-outlet></router-outlet>
 
 <footer class="app-footer">
-  &copy; 2025 Blancherie — Wissem Eddine Souilhi
+  &copy; 2025 Blanchisserie — Wissem Eddine Souilhi
 </footer>
