--- a/LaundryManager.Client/src/app/pages/create-command-page/create-command-page.html
+++ b/LaundryManager.Client/src/app/pages/create-command-page/create-command-page.html
@@ -1,1 +1,36 @@
-<p>create-command-page works!</p>
+<form [formGroup]="commandForm" (ngSubmit)="submit()" class="p-fluid">
+  <div class="p-field">
+    <label for="reason">Reason</label>
+    <input pInputText id="reason" formControlName="reason" />
+  </div>
+
+  <div class="p-field">
+    <label for="comment">Comment</label>
+    <textarea pInputTextarea id="comment" formControlName="comment" rows="3"></textarea>
+  </div>
+
+  <div formArrayName="articles">
+    <div *ngFor="let article of articles.controls; let i = index" [formGroupName]="i" class="p-mb-3 p-p-3 p-shadow-2">
+      <h5>Article {{ i + 1 }}</h5>
+
+      <div class="p-field">
+        <label for="articleName-{{ i }}">Article Name</label>
+        <input pInputText id="articleName-{{ i }}" formControlName="articleName" />
+      </div>
+
+      <div class="p-field">
+        <label for="quantity-{{ i }}">Quantity</label>
+        <input type="number" pInputText id="quantity-{{ i }}" formControlName="quantity" />
+      </div>
+
+      <button pButton type="button" icon="pi pi-trash" class="p-button-danger" (click)="removeArticle(i)">
+        Remove Article
+      </button>
+    </div>
+  </div>
+
+  <button pButton type="button" label="Add Article" icon="pi pi-plus" (click)="addArticle()" class="p-mt-2 p-button-secondary"></button>
+
+  <button pButton type="submit" label="Submit" class="p-mt-3 p-button-success"></button>
+</form>
+
