--- a/LaundryManager.Client/src/app/pages/register-page/register-page.css
+++ b/LaundryManager.Client/src/app/pages/register-page/register-page.css
@@ -12,10 +12,10 @@
   padding: 1rem;
 }
 
-/* .login-card {
+.register-card {
   width: 100%;
   max-width: 400px;
-} */
+}
 
 .field {
   margin-bottom: 1rem;
