--- a/LaundryManager.Client/src/app/pages/register-page/register-page.html
+++ b/LaundryManager.Client/src/app/pages/register-page/register-page.html
@@ -24,13 +24,13 @@
 <div class="p-fluid">
     <div class="field">
       <label for="phoneNumber">Mobile</label>
-      <input pInputText id="phoneNumber" formControlName="phoneNumber" class="full-width" />
+      <input pInputText id="phoneNumber" formControlName="phoneNumber" class="full-width"  placeholder="Ex: 06 12 34 56 78"/>
     </div>
 </div>
 <div class="p-fluid">
     <div class="field">
       <label for="password">Mot de passe</label>
-      <p-password formControlName="password" [toggleMask]="true" [feedback]="false" class="full-width"></p-password>
+      <p-password formControlName="password" [toggleMask]="true" [feedback]="true" class="full-width"></p-password>
     </div>
 </div>
 
