--- a/LaundryManager.Client/src/app/pages/login-page/login-page.html
+++ b/LaundryManager.Client/src/app/pages/login-page/login-page.html
@@ -3,8 +3,8 @@
     <form [formGroup]="loginForm" (ngSubmit)="login()" class="p-fluid">
       <div class="p-fluid">
         <div class="field">
-          <label for="email">Adresse e-mail</label>
-          <input pInputText id="email" formControlName="email" class="full-width" />
+          <label for="ueserName">Adresse e-mail</label>
+          <input pInputText id="userName" formControlName="userName" class="full-width" />
         </div>
       </div>
   <div class="p-fluid">
