Improove design and add modal

--- a/LaundryManager.Client/src/app/pages/create-command-page/create-command-page.html
+++ b/LaundryManager.Client/src/app/pages/create-command-page/create-command-page.html
@@ -1,11 +1,11 @@
 <form [formGroup]="commandForm" (ngSubmit)="submit()" class="p-fluid">
   <div class="p-field">
-    <label for="reason">Raison</label>
+    <label for="reason">Motif</label>
     <input pInputText id="reason" formControlName="reason" />
   </div>
 
   <div class="p-field">
-    <label for="comment">Comentaire</label>
+    <label for="comment">Commentaire</label>
     <textarea pInputTextarea id="comment" formControlName="comment" rows="3"></textarea>
   </div>
 
