--- a/LaundryManager.Client/src/app/app.html
+++ b/LaundryManager.Client/src/app/app.html
@@ -3,7 +3,14 @@
     <p-menubar [model]="items" />
 </div>
 </header>
- <router-outlet></router-outlet>
+
+<main class="app-main">
+  <div class="router-wrapper">
+    <router-outlet></router-outlet>
+  </div>
+</main>
+
+ 
 
 <footer class="app-footer">
   &copy; 2025 Blanchisserie — Wissem Eddine Souilhi
