--- a/LaundryManager.Client/src/app/pages/home-page/home-page.html
+++ b/LaundryManager.Client/src/app/pages/home-page/home-page.html
@@ -27,27 +27,69 @@
       </ng-template>
 </p-table>
 
+<div class="button-container">
+  <button
+    pButton
+    type="button"
+    icon="pi pi-plus"
+    class="fab-button p-button-rounded p-button-success"
+    (click)="goToCreatePage()"
+  ></button>
+
  <p-dialog 
-  header="Command Détails" 
+  header="Détails de la commande" 
   [(visible)]="dialogVisible" 
   [modal]="true" 
   [style]="{width: '600px'}" 
   [closable]="true"
 >
   <div *ngIf="selectedCommand">
-    <h4>Motif: {{ selectedCommand.reason }}</h4>
+    <p><strong>Motif:</strong> {{ selectedCommand.reason }}</p>
     <p><strong>Commentaire:</strong> {{ selectedCommand.comment }}</p>
-    <p><strong>Statut:</strong> {{ selectedCommand.statusName }}</p>
+    <p><strong>Statut:</strong> 
+        {{ selectedCommand.statusName }}
+        <p-tag
+               [value]="selectedCommand.statusName!" 
+               [rounded]="true" 
+               [severity]="getSelectedComandSeverity()">
+        </p-tag>
+    </p>
 
     <h5 class="mt-3">Articles</h5>
-    <ul *ngIf="selectedCommand.articles?.length; else noArticles">
+    <p-table *ngIf="selectedCommand.articles?.length; else noArticles" [value]="selectedCommand.articles!" [tableStyle]="{ 'min-width': '50rem' }" [paginator]="true" [rows]="5">
+      <ng-template #header>
+        <tr>
+          <th class="w-1/6">Nom de l'article</th>
+          <th class="w-1/6">Description de l'article</th>
+          <th class="w-1/6">Quantité</th>
+          <th class="w-1/6">Type d'article</th>
+        </tr>
+      </ng-template>
+
+      <ng-template #body let-article>
+        <tr>
+          <td>{{ article.name }}</td>
+          <td>{{ article.description }}</td>
+          <td>{{ article.quantity }}</td>
+          <td>
+            <p-tag 
+               [value]="article.articleTypeName" 
+               [rounded]="true" 
+               >
+            </p-tag>
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
+    <!-- <ul *ngIf="selectedCommand.articles?.length; else noArticles">
       <li *ngFor="let article of selectedCommand.articles">
         {{ article.name }} ({{ article.quantity }})
       </li>
     </ul>
+    -->
     <ng-template #noArticles>
       <p>No articles found.</p>
-    </ng-template>
+    </ng-template> 
   </div>
 </p-dialog>
 </div>
