--- a/LaundryManager.Client/src/app/pages/home-page/home-page.html
+++ b/LaundryManager.Client/src/app/pages/home-page/home-page.html
@@ -20,7 +20,13 @@
             </p-tag>
           </td>
           <td>
-                <p-button (onClick)="showDetails(command)" icon="pi pi-eye" />
+                <p-button (onClick)="showDetails(command)" icon="pi pi-eye" styleClass="p-button-info" />
+          </td>
+           <td *ngIf="isUserAdmin()">
+                <p-button (onClick)="ValidateComand(command.id)" icon="pi pi-thumbs-up-fill" />
+          </td>
+          <td *ngIf="isUserAdmin()">
+                <p-button (onClick)="RejectComand(command.id)" icon="pi pi-times" styleClass="p-button-danger"  />
           </td>
 
         </tr>
@@ -28,7 +34,7 @@
 </p-table>
 
 <div class="button-container">
-  <button
+  <button *ngIf="!isUserAdmin()"
     pButton
     type="button"
     icon="pi pi-plus"
