--- a/LaundryManager.Client/src/app/pages/home-page/home-page.html
+++ b/LaundryManager.Client/src/app/pages/home-page/home-page.html
@@ -2,7 +2,7 @@
  <p-table [value]="commands" [tableStyle]="{ 'min-width': '50rem' }" [paginator]="true" [rows]="5">
       <ng-template #header>
         <tr>
-          <th class="w-1/6">Reason</th>
+          <th class="w-1/6">Motif</th>
           <th class="w-1/6">Comment</th>
           <th class="w-1/6">Status</th>
         </tr>
